# noita-disable-playerghost

./: CMakeLists.txt
disable-playerghost/: init.lua  mod.xml  mod_id.txt  workshop.xml  workshop_id.txt
